<resources>
    <string name="app_name">have?</string>
    <string name="get_started">Get Started</string>
    <string name="worried">Worried about your sexual health?</string>
    <string name="medical_pro">Medical pro?</string>
    <string name="patient">I\'m a Patient</string>
    <string name="expert">I\'m an Expert</string>
    <string name="step_1_prompt">I\'m worried about...</string>
    <string name="next">Next</string>
    <string name="symptoms_hint">Enter your symptoms...</string>
    <string name="back">Back</string>
    <string name="step_2_prompt">I think I might have...</string>
    <string name="none">None of these</string>
    <string name="step_3_prompt">Choose a photo</string>
    <string name="submit">Submit</string>
    <string name="summary_header">Ready to submit!</string>
    <string name="step_3_prompt_summary">I chose a photo...</string>
    <string name="notify_consensus">We\'ll notify you when your Experts reach a consensus.</string>
    <string name="request_pending">Your request is pending!</string>
    <string name="request_button">See Request</string>
    <string name="received">Consensus Reached!</string>
    <string name="negative">You can breathe easy! Your Experts think it\'s unlikely that you have</string>
    <string name="positive">Uh oh! Your Experts think you might have</string>
</resources>
