<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cs160group9.com.have.RoleChoiceActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:scaleType="centerInside"
        android:src="@drawable/hlogo" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/divider" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Header1Text"
        android:text="@string/worried" />
    <Button
        android:id="@+id/patientButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/AccentButton"
        android:text="@string/patient" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/divider" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Header1Text"
        android:text="@string/medical_pro" />
    <Button
        android:id="@+id/expertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/AccentButton"
        android:text="@string/expert" />
</LinearLayout>
